# nn_lib

./: .gitignore  CMakeLists.txt  build.sh  main.cpp  tbb.sh
cuda/: mem_bench.cu
include/: nn.h
include/layers/: conv_layer.h  fullyconnected_layer.h  layer_base.h  layers.h  max_pooling.h  sigmoid_layer.h  softmax_layer.h
include/model/: initializers.h  nn_topology.h
include/utils/: blas.h  data_source.h  dev_utils.h  tensor.h
src/: dnnl.cpp
src/layers/: conv_layer.cpp  fullyconnected_layer.cpp  layer_base.cpp  max_pooling.cpp
tests/: CMakeLists.txt  load_mnist.py  main.cpp
